--- a/index.html
+++ b/index.html
@@ -473,6 +473,8 @@
     
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/app.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4960944705429847"
+     crossorigin="anonymous"></script>
 </body>
 
 </html>
